--- a/build.gradle
+++ b/build.gradle
@@ -224,22 +224,22 @@ dependencies {
     implementation "com.android.support:preference-v14:${SUPPORT_LIBS_VERSION}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
-    implementation 'com.github.florent37:fiftyshadesof:1.0.0'
+    // implementation 'com.github.florent37:fiftyshadesof:1.0.0'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.KwabenBerko:OpenWeatherMap-Android-Library:2.0.1'
     implementation 'com.github.LawnchairLauncher:chroma:1.2.6'
     implementation 'com.github.LawnchairLauncher:hoko-lite:4e0d797'
-    implementation('com.github.LawnchairLauncher:attribouter-y:0.1.6') {
-        // The "MaterialButton" styleable defines an attr named iconSize which breaks compatibility with our source base
-        exclude group: 'com.android.support', module: 'design'
-    }
+    // implementation('com.github.LawnchairLauncher:attribouter-y:0.1.6') {
+    //     // The "MaterialButton" styleable defines an attr named iconSize which breaks compatibility with our source base
+    //     exclude group: 'com.android.support', module: 'design'
+    // }
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     implementation 'com.github.topjohnwu.libsu:core:2.5.0'
-    implementation 'eu.chainfire:librootjava:1.3.0'
+    // implementation 'eu.chainfire:librootjava:1.3.0'
     implementation 'com.luckycatlabs:SunriseSunsetCalculator:1.2'
-    implementation 'me.mvdw.recyclerviewmergeadapter:recyclerviewmergeadapter:2.1.0'
+    // implementation 'me.mvdw.recyclerviewmergeadapter:recyclerviewmergeadapter:2.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-RC1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0-RC1'
