--- a/lawnchair/AndroidManifest.xml
+++ b/lawnchair/AndroidManifest.xml
@@ -30,12 +30,6 @@
     <uses-permission android:name="${applicationId}.permission.READ_SETTINGS" />
     <uses-permission android:name="${applicationId}.permission.WRITE_SETTINGS" />
 
-    <!-- Pixel -->
-    <permission
-        android:name="${applicationId}.permission.QSB"
-        android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
-        android:protectionLevel="signatureOrSystem" />
-
     <uses-permission android:name="${applicationId}.permission.QSB" />
 
     <!-- Custom -->
@@ -48,6 +42,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.READ_WALLPAPER_INTERNAL" />
     <uses-permission android:name="android.permission.DEVICE_POWER" />
+    <uses-permission android:name="android.permission.ACCESS_SHORTCUTS" />
     <!-- For weather / sunset/-rise -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -108,6 +103,7 @@
             android:label="@string/derived_app_name"
             android:name="ch.deletescape.lawnchair.settings.ui.SettingsActivity"
             android:theme="@style/SettingsTheme.V2"
+            android:exported="true"
             android:taskAffinity="${applicationId}.tasks.SETTINGS">
             <intent-filter>
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
@@ -167,6 +163,7 @@
         <!-- Pixel -->
         <activity
             android:name="com.google.android.apps.nexuslauncher.search.AppLaunchActivity"
+            android:exported="true"
             android:theme="@android:style/Theme.NoDisplay">
             <intent-filter android:priority="1">
                 <action android:name="com.google.android.apps.nexuslauncher.search.APP_LAUNCH" />
@@ -181,12 +178,15 @@
 
         <receiver
             android:name="com.google.android.apps.nexuslauncher.qsb.OPAStatusReceiver"
+            android:exported="true"
             android:permission="android.permission.CAPTURE_AUDIO_HOTWORD">
             <intent-filter>
                 <action android:name="com.google.android.systemui.OPA_ENABLED" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.google.android.apps.nexuslauncher.smartspace.SmartspaceBroadcastReceiver">
+        <receiver android:name="com.google.android.apps.nexuslauncher.smartspace.SmartspaceBroadcastReceiver"
+            android:exported="true"
+        >
             <intent-filter>
                 <action android:name="com.google.android.apps.nexuslauncher.UPDATE_SMARTSPACE" />
             </intent-filter>
@@ -220,6 +220,7 @@
             android:label="@string/restore_backup"
             android:name="ch.deletescape.lawnchair.backup.RestoreBackupActivity"
             android:parentActivityName="ch.deletescape.lawnchair.backup.BackupListActivity"
+            android:exported="true"
             android:theme="@style/SettingsTheme.V2">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -257,6 +258,7 @@
             android:label="@string/pref_integrations"
             android:name="ch.deletescape.lawnchair.settings.ui.SettingsIntegrationActivity"
             android:parentActivityName="ch.deletescape.lawnchair.settings.ui.SettingsActivity"
+            android:exported="true"
             android:theme="@style/SettingsTheme.V2">
             <intent-filter>
                 <action android:name="ninja.sesame.app.action.CONFIG_INTEGRATION" />
@@ -285,6 +287,7 @@
         <!-- Apply directly from iconpack -->
         <activity
             android:name="ch.deletescape.lawnchair.iconpack.ApplyIconPackActivity"
+            android:exported="true"
             android:theme="@style/SettingsTheme.V2.Transparent">
             <intent-filter>
                 <action android:name="ch.deletescape.lawnchair.APPLY_ICONS" />
@@ -307,6 +310,7 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/lawnchair_actions"
             android:name="ch.deletescape.lawnchair.gestures.LawnchairShortcutActivity"
+            android:exported="true"
             android:theme="@style/SettingsTheme.V2">
             <intent-filter>
                 <action android:name="android.intent.action.CREATE_SHORTCUT" />
@@ -317,6 +321,7 @@
         <activity
             android:name="ch.deletescape.lawnchair.gestures.ui.RunHandlerActivity"
             android:theme="@style/SettingsTheme.V2.Transparent"
+            android:exported="true"
             android:taskAffinity="${applicationId}.tasks.RUN_HANDLER">
             <intent-filter>
                 <action android:name="ch.deletescape.lawnchair.START_ACTION" />
@@ -336,6 +341,7 @@
 
         <activity
             android:name="ch.deletescape.lawnchair.FakeLauncher"
+            android:exported="true"
             android:enabled="false">
 
             <intent-filter>
@@ -356,6 +362,7 @@
         <receiver
             android:description="@string/dt2s_admin_hint"
             android:name="ch.deletescape.lawnchair.gestures.handlers.SleepMethodDeviceAdmin$SleepDeviceAdmin"
+            android:exported="true"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
             <meta-data
                 android:name="android.app.device_admin"
@@ -369,6 +376,7 @@
         <service
             android:name="ch.deletescape.lawnchair.LawnchairAccessibilityService"
             android:label="@string/derived_app_name"
+            android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
